=======
CHANGES
=======

3.9.1 (unreleased)
------------------

- No longer using deprected ``zope.testing.doctest``. Use python's build-in
  ``doctest`` instead.


3.9.0 (2010-07-19)
------------------

- Added missing BBB import in ``zope.app.component.metaconfigure``.

- Requiring at least ``zope.component`` 3.8 where some modules have
  moved which are BBB imported here.


3.8.4 (2010-01-08)
------------------

- Import hooks functionality from zope.component after it was moved there from
  zope.site.

- Import ISite and IPossibleSite from zope.component after they were moved
  there from zope.location. This lifts the direct dependency on zope.location.

- Fix tests using a newer zope.publisher that requires zope.login.

3.8.3 (2009-07-11)
------------------

- Removed unnecessary dependency on ``zope.app.interface``.


3.8.2 (2009-05-22)
------------------

- Fix missing import in ``zope.app.component.metadirectives``.


3.8.1 (2009-05-21)
------------------

- Add deprecation note.

3.8.0 (2009-05-21)
------------------

- IMPORTANT: this package is now empty except for some ZMI definitions
  in zope.app.component.browser. Functionality from this package has
  been moved to ``zope.site``, ``zope.componentvocabulary`` and
  ``zope.component``, so preferably import from those locations.

- zope.componentvocabulary has the vocabulary implementations that
  were in zope.app.componentvocabulary now, import them from there for
  backwards compatibility.

- moved zope:resource and zope:view directive implementation and tests
  over into zope.component [zcml].

3.7.0 (2009-04-01)
------------------

- Removed deprecated `zope:defaultView` directive and its
  implementation.  New directive to set default view is
  `browser:defaultView`.

3.6.1 (2009-03-12)
------------------

- Make ``class`` directive schemas importable from old location,
  raising a deprecation warning. It was moved in the previous release,