@@ -69,7 +69,6 @@ setup(name='zope.app.component',
           'zope.cachedescriptors',
           'zope.component [hook,zcml] >= 3.8',
           'zope.configuration',
-          'zope.deferredimport',
           'zope.deprecation',
           'zope.event',
           'zope.exceptions',
